vlib/v/checker/tests/if_smartcast_mutation_err.out
vlib/v/checker/tests/if_smartcast_mutation_err.vv:6:3: error: cannot mutate `a` in a non-mut smartcast, use `if mut a ...`
    4 |     a := SmartcastValue(1)
    5 |     if a is int {
    6 |         a = 3
      |         ^
    7 |     }
    8 | }
