vlib/v/checker/tests/if_smartcast_mutation_err.vv
type SmartcastValue = int | string
fn main() {
	a := SmartcastValue(1)
	if a is int {
		a = 3
	}
}
